# echo_journey

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cli.py  cookiecutter-config-file.yml  log_config.yml  pyproject.toml  requirements.txt  test.py  test.txt  test2.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: README.md
echo_journey/: __init__.py  main.py  test.py
echo_journey/api/: downward_protocol_handler.py  restful_routes.py  websocket_routes.py
echo_journey/api/proto/: downward_message_wrapper.py  downward_pb2.py  downward_pb2.pyi  generate.sh  upward_message_wrapper.py  upward_pb2.py  upward_pb2.pyi
echo_journey/audio/pronunciation_assessment/: azure.py  base.py
echo_journey/audio/speech_to_text/: __init__.py  asr.py  azure.py  base.py  kanyun.py
echo_journey/audio/text_to_speech/: __init__.py  base.py  huoshan_tts.py  kanyun_tts.py
echo_journey/common/: utils.py
echo_journey/data/: __init__.py  assistant_content.py  assistant_meta.py  class_status.py  learn_situation.py  llm.py  llm_utils.py  my_logger.py  orchestrator.py  orchestrator_edge.py  orchestrator_node.py  practise_progress.py  pronunciation_result.py  raw_edge.py  utils.py  whole_context.py
echo_journey/data/data/: assistant_content.py  assistant_meta.py  base_context.py  configs.py  diff_result.py  orchestrator.py  orchestrator_node.py  raw_node.py  trace_info.py  whole_context.py
echo_journey/data/llms/: __init__.py  llm_utils.py  openai.py
echo_journey/proto/: downward.proto  upward.proto
echo_journey/services/: exercise_service.py  talk_practise_service.py
echo_journey/services/bots/: correct_bot.py  exercise_bot.py  exercise_correct_bot.py  history_learn_situation_bot.py  practise_progress.py  scene_generate_bot.py  talk_practise_bot.py
echo_journey/services/bots/meta/: finals_pron.json  initials_pron.json  scene_generation.yaml  three_syllable_split.json
echo_journey/services/meta/: correct.yaml  talk_practise.yaml
project_desc/: how-to-use.md  project_readme.md  prompt_readme.md
project_desc/prompt/: correct.yaml  exercise.yaml  history_learn_situation.yaml  talk_practise.yaml  title.yaml
proto/: downward.proto
tests/: test_process.py
